FiX: drop-down in 'menu-toggle-btn' not wide enough on safari mobile

--- a/client/src/app/components/atoms/menu-toggle-btn/menu-toggle-btn.component.css
+++ b/client/src/app/components/atoms/menu-toggle-btn/menu-toggle-btn.component.css
@@ -97,6 +97,7 @@ span::after {
     position: absolute;
     top: 50%;
     transform: translate(var(--translateX, 0), -50%) scale(var(--scale, 1));
+    width:max-content;
     
     display: flex;
     padding: 6px;
